--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
   "devDependencies": {
     "browser-sync": "^3.0.3",
     "gulp": "^5.0.0",
+    "gulp-image": "^6.3.1",
+    "gulp-imagemin": "^9.1.0",
     "gulp-sass": "^5.1.0",
+    "gulp-webp": "^5.0.0",
+    "imagemin": "^9.0.1",
+    "imagemin-avif": "^0.1.6",
     "sass": "^1.80.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.7"
   }
 }
